--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="story" id="story">
+		<section class="screenshots" id="screenshots">
 			<div class="container-fluid">
 				<div class="row">
 					<ul class="grid">
