--- a/index.html
+++ b/index.html
@@ -322,7 +322,8 @@
 				<div class="row">
 					<div class="col-md-12 text-center wp4">
 						<h1>Seen Enough?</h1>
-						<a href="http://tympanus.net/codrops/?p=22554" class="download-btn">Download! <i class="fa fa-download"></i></a>
+						<p>This is the current status of the game </p>
+						<a href="http://tympanus.net/codrops/?p=22554" class="download-btn">Download coming soon! <i class="fa fa-download"></i></a>
 					</div>
 				</div>
 			</div>
@@ -341,7 +342,7 @@
 							<li><a href="#about">About</a></li>
 							<li><a href="#features">Features</a></li>
 							<li><a href="#screenshots">Screenshots</a></li>
-							<li><a href="#download">Download</a></li>
+							<li><a href="#download">Status</a></li>
 						</ul>
 					</div>
 				</div>
@@ -355,7 +356,7 @@
 				</ul>
 				<ul>
 					<li><a href="#screenshots"><i class="fa fa-desktop"></i>Screenshots</a></li>
-					<li><a href="#download"><i class="fa fa-download"></i>Download</a></li>
+					<li><a href="#download"><i class="fa fa-download"></i>Status</a></li>
 				</ul>
 			</nav>
 		</div>
