--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
 									<li>
 										<h1>The Fore-front of Design &amp; Technology</h1>
 										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-										<p><a href="#features" class="arrow-btn">Find out why this freebie rocks! <i class="fa fa-long-arrow-right"></i></a></p>
+										<p><a href="#" class="arrow-btn">Read the story!<i class="fa fa-long-arrow-right"></i></a></p>
 									</li>
+									<!--
 									<li>
 										<h1>Multi-Purpose User Centric Design</h1>
 										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
@@ -103,6 +104,7 @@
 										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
 										<p><a href="http://tympanus.net/codrops/?p=22554" class="arrow-btn">Find out why this freebie rocks! <i class="fa fa-long-arrow-right"></i></a></p>
 									</li>
+								-->
 								</ul>
 						</div>
 					</div>
