--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 					<div class="col-md-7">
 						<ul class="footer-nav">
 							<li><a href="#about">About</a></li>
-							<li><a href="#features">Features</a></li>
+							<li><a href="#features">Team</a></li>
 							<li><a href="#screenshots">Screenshots</a></li>
 							<li><a href="#download">Status</a></li>
 						</ul>
@@ -354,7 +354,7 @@
 			<nav>
 				<ul>
 					<li><a href="#about"><i class="fa fa-heart"></i>About</a></li>
-					<li><a href="#features"><i class="fa fa-flash"></i>Features</a></li>
+					<li><a href="#features"><i class="fa fa-flash"></i>Team</a></li>
 				</ul>
 				<ul>
 					<li><a href="#screenshots"><i class="fa fa-desktop"></i>Screenshots</a></li>
