--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 						<ul class="footer-nav">
 							<li><a href="#about">About</a></li>
 							<li><a href="#features">Team</a></li>
-							<li><a href="#screenshots">Screenshots</a></li>
+							<!--<li><a href="#screenshots">Screenshots</a></li>-->
 							<li><a href="#download">Status</a></li>
 						</ul>
 					</div>
@@ -387,11 +387,14 @@
 				<ul>
 					<li><a href="#about"><i class="fa fa-heart"></i>About</a></li>
 					<li><a href="#features"><i class="fa fa-flash"></i>Team</a></li>
+					<li><a href="#download"><i class="fa fa-download"></i>Status</a></li>
 				</ul>
+				<!--
 				<ul>
 					<li><a href="#screenshots"><i class="fa fa-desktop"></i>Screenshots</a></li>
 					<li><a href="#download"><i class="fa fa-download"></i>Status</a></li>
 				</ul>
+			-->
 			</nav>
 		</div>
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
