--- a/index.html
+++ b/index.html
@@ -59,12 +59,13 @@
 					<div class="row hero-content">
 						<div class="col-md-12">
 							<h1 class="animated fadeInDown">When searching for a cure is worse than the disease</h1>
-							<a href="#about" class="use-btn animated fadeInUp">Learn More</a>
+							<a href="#" class="use-btn animated fadeInUp">Watch Trailer</a><a href="#about" class="use-btn animated fadeInUp">Learn More</a>
 						</div>
 					</div>
 				</div>
 			</section>
 		</header>
+		<!--
 		<section class="video" id="about">
 			<div class="container">
 				<div class="row">
@@ -74,6 +75,7 @@
 				</div>
 			</div>
 		</section>
+	-->
 		<section class="features-intro">
 			<div class="container-fluid">
 				<div class="row">
