--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 				</div>
 			</section>
 		</header>
+		<!--
 		<section class="video" id="about">
 			<div class="container">
 				<div class="row">
@@ -74,7 +75,8 @@
 				</div>
 			</div>
 		</section>
-		<section class="features-intro">
+	-->
+		<section class="features-intro" id="about">
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-md-6 nopadding features-intro-img">
