--- a/index.html
+++ b/index.html
@@ -357,9 +357,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 text-center wp4">
-						<h1>Status</h1>
-						<p>Danse Macabre is currently under development.</p>
-						<a href="http://tympanus.net/codrops/?p=22554" class="download-btn">Download coming soon! <i class="fa fa-download"></i></a>
+						<h1>Danse Macabre is currently under development.</h1>
+						<a href="#" class="download-btn">Download coming soon! <i class="fa fa-download"></i></a>
 					</div>
 				</div>
 			</div>
