--- a/index.html
+++ b/index.html
@@ -117,15 +117,13 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<h1> The Team </h1>
 						<div class="col-md-4 feature-1 wp2">
 							<div class="feature-icon">
 								<i class="fa fa-desktop"></i>
 							</div>
 							<div class="feature-content">
 								<h1>Siena Saltzen</h1>
-								<p>Built using HTML5/CSS3 and jQuery, and built using one of the world's most powerful CSS frameworks available, Bootstrap.</p>
-								<a href="http://tympanus.net/codrops/?p=22554" class="read-more-btn">Read More <i class="fa fa-chevron-circle-right"></i></a>
+								<p>Description of current responsabilities.</p>
 							</div>
 						</div>
 						<div class="col-md-4 feature-2 wp2 delay-05s">
@@ -134,8 +132,7 @@
 							</div>
 							<div class="feature-content">
 								<h1>Carolyn Lai</h1>
-								<p>Perfect if you run your own start-up, product or service. Boxify can showcase your business converting your visits to income.</p>
-								<a href="http://tympanus.net/codrops/?p=22554" class="read-more-btn">Read More <i class="fa fa-chevron-circle-right"></i></a>
+								<p>Description of current responsabilities.</p>
 							</div>
 						</div>
 						<div class="col-md-4 feature-3 wp2 delay-1s">
@@ -144,8 +141,7 @@
 							</div>
 							<div class="feature-content">
 								<h1>Janice Hsu</h1>
-								<p>As aways, download Boxify for free exclusively from Codrops. If you love Boxify and want to thank me, simply <a href="#">buy me a beer</a>. </p>
-								<a href="http://tympanus.net/codrops/?p=22554" class="read-more-btn">Read More <i class="fa fa-chevron-circle-right"></i></a>
+								<p>Description of current responsabilities.</p>
 							</div>
 						</div>
 						<div class="col-md-4 feature-4 wp2 delay-1s">
@@ -154,8 +150,7 @@
 							</div>
 							<div class="feature-content">
 								<h1>Justin Veyna</h1>
-								<p>As aways, download Boxify for free exclusively from Codrops. If you love Boxify and want to thank me, simply <a href="#">buy me a beer</a>. </p>
-								<a href="http://tympanus.net/codrops/?p=22554" class="read-more-btn">Read More <i class="fa fa-chevron-circle-right"></i></a>
+								<p>Description of current responsabilities.</p>
 							</div>
 						</div>
 						<div class="col-md-4 feature-5 wp2 delay-1s">
@@ -164,8 +159,7 @@
 							</div>
 							<div class="feature-content">
 								<h1>Stephanie Chan</h1>
-								<p>As aways, download Boxify for free exclusively from Codrops. If you love Boxify and want to thank me, simply <a href="#">buy me a beer</a>. </p>
-								<a href="http://tympanus.net/codrops/?p=22554" class="read-more-btn">Read More <i class="fa fa-chevron-circle-right"></i></a>
+								<p>Description of current responsabilities.</p>
 							</div>
 						</div>
 						<div class="col-md-4 feature-6 wp2 delay-1s">
@@ -174,8 +168,7 @@
 							</div>
 							<div class="feature-content">
 								<h1>Andres Vourakis</h1>
-								<p>As aways, download Boxify for free exclusively from Codrops. If you love Boxify and want to thank me, simply <a href="#">buy me a beer</a>. </p>
-								<a href="http://tympanus.net/codrops/?p=22554" class="read-more-btn">Read More <i class="fa fa-chevron-circle-right"></i></a>
+								<p>Description of current responsabilities.</p>
 							</div>
 						</div>
 
