--- a/index.html
+++ b/index.html
@@ -361,9 +361,8 @@
 				<div class="row">
 					<div class="col-md-5">
 						<h1 class="footer-logo">
-						<img src="img/logo-blue.png" alt="Footer Logo Blue">
+						<img src="img/dm-logo.png" alt="Footer Logo Blue">
 						</h1>
-						<p>A free website template created exclusively for <a href="http://tympanus.net/codrops/"><em>Codrops</em></a></p>
 					</div>
 					<div class="col-md-7">
 						<ul class="footer-nav">
