--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 									<li>
 										<h1>Danse Macabre: Plague</h1>
 										<p>A unique combination of a 2.5D platformer and visual novel. We have taken the best of both genres to create a story driven game with the simple addicting play of a 2D platformer. Instead of a traditional 2D setting, Danse Macabre uses an unusual approach of what we refer to as “two and a half dimensions”.  This means that the world consist of two 2D layers that overlap each other but do not interact. One layer is “real” world, and the other is the spiritual realm.  Switching between layers is encouraged to utilize abilities specific for each realm to surmount objects that may be impossible in one.</p>
-										<p><a href="https://docs.google.com/a/uci.edu/document/d/19IV_R-TLvVzDkv9a9gYJtzdRHnP6O7nD3WjZC_xLcaQ/edit?usp=sharing" class="arrow-btn" target="_blank">Read Document Design!<i class="fa fa-long-arrow-right"></i></a></p>
+										<p><a href="https://docs.google.com/a/uci.edu/document/d/19IV_R-TLvVzDkv9a9gYJtzdRHnP6O7nD3WjZC_xLcaQ/edit?usp=sharing" class="arrow-btn" target="_blank">Design Document<i class="fa fa-long-arrow-right"></i></a></p>
 									</li>
 									<!--
 									<li>
@@ -353,7 +353,7 @@
 				<div class="row">
 					<div class="col-md-12 text-center wp4">
 						<h1>Danse Macabre is currently under development.</h1>
-						<a href="#" class="download-btn">Download coming soon! <i class="fa fa-download"></i></a>
+						<a href="#" class="download-btn">Download coming soon.<i class="fa fa-download"></i></a>
 					</div>
 				</div>
 			</div>
