--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
 			</div>
 		</section>
 		<section class="features-list" id="features">
+		<center><h1>The Team</h1>	
+		<p>Test</p></center>
+		</br>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
@@ -125,7 +128,7 @@
 							</div>
 							<div class="feature-content">
 								<h1>Siena Saltzen</h1>
-								<p>Description of current responsabilities.</p>
+								<p>Project Manager</p>
 							</div>
 						</div>
 						<div class="col-md-4 feature-2 wp2 delay-05s">
@@ -134,7 +137,7 @@
 							</div>
 							<div class="feature-content">
 								<h1>Carolyn Lai</h1>
-								<p>Description of current responsabilities.</p>
+								<p>Game Designer</p>
 							</div>
 						</div>
 						<div class="col-md-4 feature-3 wp2 delay-1s">
@@ -143,7 +146,7 @@
 							</div>
 							<div class="feature-content">
 								<h1>Janice Hsu</h1>
-								<p>Description of current responsabilities.</p>
+								<p>Music</p>
 							</div>
 						</div>
 						<div class="col-md-4 feature-4 wp2 delay-1s">
@@ -152,7 +155,7 @@
 							</div>
 							<div class="feature-content">
 								<h1>Justin Veyna</h1>
-								<p>Description of current responsabilities.</p>
+								<p>Game Development</p>
 							</div>
 						</div>
 						<div class="col-md-4 feature-5 wp2 delay-1s">
@@ -161,7 +164,7 @@
 							</div>
 							<div class="feature-content">
 								<h1>Stephanie Chan</h1>
-								<p>Description of current responsabilities.</p>
+								<p>Story Writer</p>
 							</div>
 						</div>
 						<div class="col-md-4 feature-6 wp2 delay-1s">
@@ -170,7 +173,7 @@
 							</div>
 							<div class="feature-content">
 								<h1>Andres Vourakis</h1>
-								<p>Description of current responsabilities.</p>
+								<p>Business and Marketing</p>
 							</div>
 						</div>
 
