--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 		</section>
 		<section class="features-list" id="features">
 		<center><h1>The Team</h1>	
-		<p>Test</p></center>
+		<p>Although the entire team is involved in all aspects of the game development, each one have especific responsabilities based on our expertise</p></center>
 		</br>
 			<div class="container">
 				<div class="row">
@@ -129,6 +129,7 @@
 							<div class="feature-content">
 								<h1>Siena Saltzen</h1>
 								<p>Project Manager</p>
+								</br>
 							</div>
 						</div>
 						<div class="col-md-4 feature-2 wp2 delay-05s">
@@ -138,6 +139,7 @@
 							<div class="feature-content">
 								<h1>Carolyn Lai</h1>
 								<p>Game Designer</p>
+								</br>
 							</div>
 						</div>
 						<div class="col-md-4 feature-3 wp2 delay-1s">
@@ -146,7 +148,8 @@
 							</div>
 							<div class="feature-content">
 								<h1>Janice Hsu</h1>
-								<p>Music</p>
+								<p>Music Supervisor</p>
+								</br>
 							</div>
 						</div>
 						<div class="col-md-4 feature-4 wp2 delay-1s">
@@ -156,6 +159,7 @@
 							<div class="feature-content">
 								<h1>Justin Veyna</h1>
 								<p>Game Development</p>
+								</br>
 							</div>
 						</div>
 						<div class="col-md-4 feature-5 wp2 delay-1s">
@@ -165,6 +169,7 @@
 							<div class="feature-content">
 								<h1>Stephanie Chan</h1>
 								<p>Story Writer</p>
+								</br>
 							</div>
 						</div>
 						<div class="col-md-4 feature-6 wp2 delay-1s">
@@ -174,6 +179,7 @@
 							<div class="feature-content">
 								<h1>Andres Vourakis</h1>
 								<p>Business and Marketing</p>
+								</br>
 							</div>
 						</div>
 
