--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 		</section>
 		<section class="features-list" id="features">
 		<center><h1>The Team</h1>	
-		<p>Although the entire team is involved in all aspects of the game development, each one have especific responsabilities based on our expertise</p></center>
+		<p>Although the entire team is involved in all aspects of the game development, each team member has especific responsabilities based on his/her areas of expertise.</p></center>
 		</br>
 			<div class="container">
 				<div class="row">
@@ -158,7 +158,7 @@
 							</div>
 							<div class="feature-content">
 								<h1>Justin Veyna</h1>
-								<p>Game Development</p>
+								<p>Game Developer</p>
 								</br>
 							</div>
 						</div>
