--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Danse Macabre: Plague</title>
+		<title>Danse Macabre: Dual Fates</title>
 		<meta name="description" content="A free HTML5/CSS3 template made exclusively for Codrops" />
 		<meta name="keywords" content="html5 template, css3, one page, animations, agency, portfolio, web design" />
 		<meta name="author" content="" />
@@ -93,7 +93,7 @@
 						<div class="features-slider">
 								<ul class="slides" id="featuresSlider">
 									<li>
-										<h1>Danse Macabre: Plague</h1>
+										<h1>Danse Macabre: Dual Fates</h1>
 										<p>A unique combination of a 2.5D platformer and visual novel. We have taken the best of both genres to create a story driven game with the simple addicting play of a 2D platformer. Instead of a traditional 2D setting, Danse Macabre uses an unusual approach of what we refer to as “two and a half dimensions”.  This means that the world consist of two 2D layers that overlap each other but do not interact. One layer is “real” world, and the other is the spiritual realm.  Switching between layers is encouraged to utilize abilities specific for each realm to surmount objects that may be impossible in one.</p>
 										<p><a href="https://docs.google.com/a/uci.edu/document/d/19IV_R-TLvVzDkv9a9gYJtzdRHnP6O7nD3WjZC_xLcaQ/edit?usp=sharing" class="arrow-btn" target="_blank">Design Document<i class="fa fa-long-arrow-right"></i></a></p>
 									</li>
