--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<div class="container">
 					<div class="row nav-wrapper">
 						<div class="col-md-6 col-sm-6 col-xs-6 text-left">
-							<a href="#"><img src="img/dm-logo.png" alt="Danse Macabre Logo"></a>
+							<a href="#"><img src="img/dm_logo.png" alt="Danse Macabre Logo"></a>
 						</div>
 						<div class="col-md-6 col-sm-6 col-xs-6 text-right navicon">
 							<p>MENU</p><a id="trigger-overlay" class="nav_slide_button nav-toggle" href="#"><span></span></a>
