--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					</div>
 					<div class="row hero-content">
 						<div class="col-md-12">
-							<h1 class="animated fadeInDown">When searching for a cure is worse than the disease</h1>
+							<h1 class="animated fadeInDown"><font face=acme> <i>When searching for a cure is worse than the disease </i></font></h1>
 							<a href="#" class="use-btn animated fadeInUp">Watch Trailer</a><a href="#about" class="use-btn animated fadeInUp">Learn More</a>
 						</div>
 					</div>
@@ -361,7 +361,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section>	
 
 		<!-- TEAM ENDS -->
 
