--- a/index.html
+++ b/index.html
@@ -97,12 +97,13 @@
 										<p>A unique combination of a 2.5D platformer and visual novel. We have taken the best of both genres to create a story driven game with the simple addicting play of a 2D platformer. Instead of a traditional 2D setting, Danse Macabre uses an unusual approach of what we refer to as “two and a half dimensions”.  This means that the world consist of two 2D layers that overlap each other but do not interact. One layer is “real” world, and the other is the spiritual realm.  Switching between layers is encouraged to utilize abilities specific for each realm to surmount objects that may be impossible in one.</p>
 										<p><a href="https://docs.google.com/a/uci.edu/document/d/19IV_R-TLvVzDkv9a9gYJtzdRHnP6O7nD3WjZC_xLcaQ/edit?usp=sharing" class="arrow-btn" target="_blank">Design Document<i class="fa fa-long-arrow-right"></i></a></p>
 									</li>
-									<!--
+									
 									<li>
 										<h1>Multi-Purpose User Centric Design</h1>
 										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
 										<p><a href="http://tympanus.net/codrops/?p=22554" class="arrow-btn">Find out why this freebie rocks! <i class="fa fa-long-arrow-right"></i></a></p>
 									</li>
+									<!--
 									<li>
 										<h1>Made with Love, Released for Free</h1>
 										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
@@ -163,7 +164,7 @@
 					<div class="col-md-12">
 						<h1>Packed Full of Powerful Features</h1>
 						<p>Danse Macabre allows the player to control one character, Benjamin Watts. The game is experienced from his point of view which can change based on the player’s actions and decisions. During gameplay, the player has control over his basic movements, such as walking, running, and jumping. In addition, Benjamin possesses special abilities such as the use of the grappling hook, teleportation, dash and double jumping. The effort that the player expends in completing the game determines the final ending, giving them limited control over the storyline. </p>
-						<p><a href="#screenshots" class="arrow-btn">See some of Benjamin's Special Abilities<i class="fa fa-long-arrow-right"></i></a></p>
+						<p><a href="#screenshots" class="arrow-btn">See some screenshot's of the game<i class="fa fa-long-arrow-right"></i></a></p>
 					</div>
 				</div>
 			</div>
@@ -180,7 +181,7 @@
 								<div class="caption-content">
 									<a href="img/large/01.jpg" class="single_image">
 										<i class="fa fa-search"></i><br>
-										<p>Dash</p>
+										<p>Level 1 Start</p>
 									</a>
 								</div>
 								</figcaption>
@@ -193,7 +194,7 @@
 								<div class="caption-content">
 									<a href="img/large/02.jpg" class="single_image">
 										<i class="fa fa-search"></i><br>
-										<p>Double Jump</p>
+										<p>Level 1 High</p>
 									</a>
 								</div>
 								</figcaption>
@@ -206,7 +207,7 @@
 								<div class="caption-content">
 									<a href="img/large/03.jpg" class="single_image">
 										<i class="fa fa-search"></i><br>
-										<p>Flight</p>
+										<p>Level 2 Start</p>
 									</a>
 								</div>
 								</figcaption>
@@ -219,7 +220,7 @@
 								<div class="caption-content">
 									<a href="img/large/04.jpg" class="single_image">
 										<i class="fa fa-search"></i><br>
-										<p>Teleportation</p>
+										<p>Visual Novel</p>
 									</a>
 								</div>
 								</figcaption>
