--- a/index.html
+++ b/index.html
@@ -59,23 +59,22 @@
 					<div class="row hero-content">
 						<div class="col-md-12">
 							<h1 class="animated fadeInDown"><font face=acme> <i>When searching for a cure is worse than the disease </i></font></h1>
-							<a href="#" class="use-btn animated fadeInUp">Watch Trailer</a><a href="#about" class="use-btn animated fadeInUp">Learn More</a>
+							<a href="#about" class="use-btn animated fadeInUp">Watch Trailer</a><a href="#about" class="use-btn animated fadeInUp">Learn More</a>
 						</div>
 					</div>
 				</div>
 			</section>
 		</header>
-		<!--
+		
 		<section class="video" id="about">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 text-center">
-						<h1><a href="https://www.youtube.com/watch?v=HPe6BgzHWY0?autoplay=1&wmode=opaque&fs=1" class="youtube-media"><i class="fa fa-play-circle-o"></i> Watch the Video</a></h1>
+						<h1><a href="https://www.youtube.com/embed/7yPunOC-ozc?autoplay=1&wmode=opaque&fs=1" class="youtube-media"><i class="fa fa-play-circle-o"></i> Watch the Video</a></h1>
 					</div>
 				</div>
 			</div>
 		</section>
-	-->
 		<section class="features-intro" id="about">
 			<div class="container-fluid">
 				<div class="row">
