--- a/index.html
+++ b/index.html
@@ -286,7 +286,14 @@
 				</div>
 			-->
 			</div>
+		<!--
 		</section>
+		<section class="Music" id="music">
+		<div class="container">
+		<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/368092127&amp;color=%237ab4ba&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true%22%3E</iframe>
+		</div>
+		</section>
+		-->
 
 		<!-- TEAM STARTS -->
 
