--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<h1>Packed Full of Powerful Features</h1>
-						<p>Danse Macabre allows the player to control one character, Benjamin Watts. The game is experienced from his point of view which can change based on the player’s actions and decisions. During gameplay, the player has control over his basic movements, such as walking, running, and jumping. In addition, Benjamin possesses special abilities such as the use of the grappling hook, teleportation, dash and double jumping. The effort that the player expends in completing the game determines the final ending, giving them limited control over the storyline. </p>
+						<p>Danse Macabre allows the player to control one character, Benjamin Watts. The game is experienced from his point of view which can change based on the player’s actions and decisions. During gameplay, the player has control over his basic movements, such as walking, running, and jumping. In addition, Benjamin possesses special abilities such as the use of the grappling hook, teleportation, dash and double jumping. The effort that the player expends in completing the w determines the final ending, giving them limited control over the storyline. </p>
 						<p><a href="#screenshots" class="arrow-btn">See some screenshot's of the game<i class="fa fa-long-arrow-right"></i></a></p>
 					</div>
 				</div>
@@ -286,14 +286,36 @@
 				</div>
 			-->
 			</div>
-		<!--
+		
 		</section>
-		<section class="Music" id="music">
-		<div class="container">
-		<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/368092127&amp;color=%237ab4ba&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true%22%3E</iframe>
-		</div>
+
+		<section class="music" id="music">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12 text-center wp4">
+						<center><h1>The Music</h1>	
+						<h3>Listen to the original music created for Danse Macabre: Dual Fates.</h3></center>
+						</br>
+						<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/368092127&amp;color=%237ab4ba&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true%22%3E"></iframe>
+					</div>
+				</div>
+			</div>
 		</section>
-		-->
+		
+		<!-- DONWLOAD STARTS -->
+
+		<section class="download" id="download">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12 text-center wp4">
+						<h1>Danse Macabre is currently under development.</h1>
+						<a href="#" class="download-btn">Download coming soon.<i class="fa fa-download"></i></a>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- DOWNLOAD ENDS -->
 
 		<!-- TEAM STARTS -->
 
@@ -372,22 +394,13 @@
 
 		<!-- TEAM ENDS -->
 
-		<section class="download" id="download">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12 text-center wp4">
-						<h1>Danse Macabre is currently under development.</h1>
-						<a href="#" class="download-btn">Download coming soon.<i class="fa fa-download"></i></a>
-					</div>
-				</div>
-			</div>
-		</section>
+
 		<footer>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-5">
 						<h1 class="footer-logo">
-						<img src="img/dm-logo.png" alt="Footer Logo Blue">
+						<img src="img/dm-logo.png" alt="Footer Logo">
 						</h1>
 					</div>
 					<div class="col-md-7">
